--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ html {
   scroll-behavior: smooth;
   display: inline-block;
   overflow-x: hidden;
+  height: 100vh;
 }
 
 body {
